--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "jsonlint": "^1.6.3",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-safe-parser": "^4.0.1",
     "react": "^16.9.0",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
